# lis_turtlebots

./: CMakeLists.txt  README.md  package.xml
launch/: amcl_demo.launch  amcl_demo_waiters.launch  amcl_demo_waiters.launch~  amcl_demo_waiters_no_ar.launch  amcl_demo_waiters_no_ar.launch~  basic_turtlebot.launch  push_objects.launch  push_objects.launch~  smach_push_objects.launch  smach_push_objects.launch~  turtlebot_2turtles_communication.launch  turtlebot_2turtles_communication.launch~  waiters.launch  waiters.launch~
maps/: lis_urop_area.pgm  lis_urop_area.yaml  pr2_and_offices.pgm  pr2_and_offices.yaml  pr2_area.pgm  pr2_area.yaml
src/: BeerBotDomain.py  BeerBotDomain.py~  Controller.py~  SimpleServer.py  SimpleServer.py~  TurtleBotAgent.py  TurtleBotAgent.py.1  TurtleBotAgent.py~  basic_turtlebot.py  basic_turtlebot.py~  button_cleaner_waiter.py  button_detector.py  cleaner_waiter.py  cleaner_waiter.py~  generate_timing_for_planner.py  generate_timing_for_planner.py~  listener.py  listener.py~  multinavigator.py  multinavigator.py~  multinavigator_old.py  multirobot_navigation.py  multirobot_navigation.py~  navigator.py  navigator.py~  orientation.py  orientation.py~  point.py  point.py~  pr2_2turtles_communication.py  pr2_2turtles_communication.py~  pr2_ari_2turtles.py  pr2_ari_2turtles.py~  pr2_communication.py  pr2_communication.py~  talker.py  talker.py~  todo_list.txt  todo_list.txt~  turtlebot_2turtles_communication.py  (+16 more)
src/organized/: Orientation.py
src/planner_files/: TransMap.csv  actMapMealy.csv
