<package>
  <name>lis_turtlebots</name>
  <version>1.0.0</version>
  <description>Code for turtlebots.</description>
  <maintainer email="gcruz92@mit.edu">Gabriel Cruz</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_teleop</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_apps</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_apps/issues</url>
  
  <author email="gcruz92@mit.edu">Gabriel Cruz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>
  <run_depend>cmd_vel_mux</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
</package>
